# Icarus

./: .gitignore  CMakeLists.txt  MainSingle.cpp  MainSingle.h  RemoteBeacons.json  index.html  main.cpp  preparing.sh  semaphore.hpp
controls/: TCPClient.cpp  TCPClient.h  TCPClientControl.cpp  TCPClientControl.h  WebServer.cpp  WebServer.h
js/: main.js
models/: Beacon.h  Camera.cpp  Camera.h  Message.cpp  Message.h  RemoteBeacon.cpp  RemoteBeacon.h
